feat: save current page font-size

--- a/tributePage/index.html
+++ b/tributePage/index.html
@@ -18,6 +18,7 @@
             <button type="button" name="changeFontSize" id="decreaseFontSize">A-</button>
             <button type="reset" name="changeFontSize" id="resetFontSize">Reset</button>
             <button type="button" name="changeFontSize" id="increaseFontSize">A+</button>
+            <button type="button" name="saveFontSize" id="saveFontSize">SAVE</button>
         </div>
         <h1>Britney Spears: A tribute page</h1>
     </header>
@@ -33,7 +34,8 @@
     <footer id="footer">
 
     </footer>
-    <script src="js/index.js"></script>
+    <noscript>Your browser does not have JavaScript support or it is deactivated</noscript>
+    <script src="js/index.js" type="module"></script>
     <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
 
