refactor: changed font size controller from buttons to a range input

--- a/tributePage/index.html
+++ b/tributePage/index.html
@@ -15,10 +15,7 @@
     <a class="sr-only" href="#main">Skip to Main Content</a>
     <header id="header">
         <div id="font-size-controllers">
-            <button type="button" name="changeFontSize" id="decreaseFontSize">A-</button>
-            <button type="reset" name="changeFontSize" id="resetFontSize">Reset</button>
-            <button type="button" name="changeFontSize" id="increaseFontSize">A+</button>
-            <button type="button" name="saveFontSize" id="saveFontSize">SAVE</button>
+            <input type="range" min="60" max="140" value="100" step="20" name="changeFontSize" id="changeFontSize">
         </div>
         <h1>Britney Spears: A tribute page</h1>
     </header>
