--- a/tributePage/index.html
+++ b/tributePage/index.html
@@ -108,7 +108,7 @@
     </footer>
     <noscript>Your browser does not have JavaScript support or it is deactivated</noscript>
     <script src="js/index.js" type="module"></script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
 
 </html>
