--- a/technicalDocumentationPage/index.html
+++ b/technicalDocumentationPage/index.html
@@ -10,33 +10,78 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 
-<body class="main-yellow color-main-black dark">
+<body class="main-yellow color-main-black">
+    <ul class="sr-only">
+        <li><a tabindex="0" href="#navbar">Skip to Navigation</a></li>
+        <li><a tabindex="0" href="#main-doc">Skip to Main Content</a></li>
+    </ul>
     <nav id="navbar">
         <header></header>
-        <a href="#Section_1" class="nav-link">Section 1</a>
-        <a href="#Section_2" class="nav-link">Section 2</a>
-        <a href="#Section_3" class="nav-link">Section 3</a>
-        <a href="#Section_4" class="nav-link">Section 4</a>
-        <a href="#Section_5" class="nav-link">Section 5</a>
+        <ul>
+            <li><a href="#spacings" class="nav-link">spacings</a></li>
+            <li><a href="#layout" class="nav-link">layout</a></li>
+            <li><a href="#colors" class="nav-link">colors</a></li>
+            <li><a href="#theme" class="nav-link">theme</a></li>
+            <li><a href="#ui_elements" class="nav-link">ui elements</a></li>
+        </ul>
+
     </nav>
     <main id="main-doc">
-        <section class="main-section" id="Section_1">
-            <header>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem assumenda officiis fuga id repudiandae quod accusamus, ut blanditiis itaque quidem culpa recusandae, accusantium quibusdam eveniet sit. Doloribus minus ipsa dolore?</header>
-        </section>
-        <section class="main-section" id="Section_2">
-            <header>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem assumenda officiis fuga id repudiandae quod accusamus, ut blanditiis itaque quidem culpa recusandae, accusantium quibusdam eveniet sit. Doloribus minus ipsa dolore?</header>
-        </section>
-        <section class="main-section" id="Section_3">
-            <header>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem assumenda officiis fuga id repudiandae quod accusamus, ut blanditiis itaque quidem culpa recusandae, accusantium quibusdam eveniet sit. Doloribus minus ipsa dolore?</header>
-        </section>
-        <section class="main-section" id="Section_4">
-            <header>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem assumenda officiis fuga id repudiandae quod accusamus, ut blanditiis itaque quidem culpa recusandae, accusantium quibusdam eveniet sit. Doloribus minus ipsa dolore?</header>
-        </section>
-        <section class="main-section" id="Section_5">
-            <header>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem assumenda officiis fuga id repudiandae quod accusamus, ut blanditiis itaque quidem culpa recusandae, accusantium quibusdam eveniet sit. Doloribus minus ipsa dolore?</header>
-        </section>
+        <h1>CSS lib based in Vuetify and Material Design</h1>
+        <section class="main-section" id="spacings">
+            <header>
+                spacings
+            </header>
+            <pre class="main-blue color-main-white">
+<code>
+$media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
+
+$total_columns: 12
+
+$column_percentage: 100% / $total_columns
+</code>
+            </pre>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate soluta error laudantium itaque repudiandae velit enim cumque sint delectus harum maxime ipsum animi corrupti molestiae atque, provident, libero mollitia incidunt.</p>
+
+            <pre class="main-blue color-main-white">
+<code>
+@each $breakpoint_key, $size_in_px in $media_breakpoints_sizes
+    @media screen and (min-width: $size_in_px)
+
+        @for $number_of_columns from 1 through $total_columns
     
+            .col-#{$breakpoint_key}#{$number_of_columns}
+                flex: 0 1 ($column_percentage * $number_of_columns)
+
+            .offset-#{$breakpoint_key}#{$number_of_columns}
+                margin-left: $column_percentage * $number_of_columns
+</code>
+            </pre>
+        </section>
+        <section class="main-section" id="layout">
+            <header>
+                layout
+            </header>
+        </section>
+        <section class="main-section" id="colors">
+            <header>
+                colors
+            </header>
+        </section>
+        <section class="main-section" id="theme">
+            <header>
+                theme
+            </header>
+        </section>
+        <section class="main-section" id="ui_elements">
+            <header>
+                ui elements
+            </header>
+        </section>
+
     </main>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
 
 </html>
