add: headings font sizes

--- a/technicalDocumentationPage/index.html
+++ b/technicalDocumentationPage/index.html
@@ -27,7 +27,7 @@
 
     </nav>
     <main id="main-doc">
-        <h1>CSS lib based in Vuetify and Material Design</h1>
+        <H1>CSS lib based in Vuetify and Material Design</H1>
         <section class="main-section" id="spacings">
             <header>
                 spacings
