fix: fixed nav and main content with overflow-y auto when viewport >= md

--- a/technicalDocumentationPage/index.html
+++ b/technicalDocumentationPage/index.html
@@ -11,13 +11,15 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 
-<body class="red color-inverted">
+<body class="main color-inverted">
     <ul class="sr-only">
         <li><a tabindex="0" href="#navbar">Skip to Navigation</a></li>
         <li><a tabindex="0" href="#main-doc">Skip to Main Content</a></li>
     </ul>
-    <nav id="navbar" class="blue">
-        <header>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, sunt saepe! Nam eveniet, id placeat modi numquam vero facere? Sed dolorem optio molestias non ab! Illo quisquam ut aliquam repudiandae?</header>
+    <nav id="navbar" class="primary color-inverted">
+        <header>
+            <h2>CSS Lib</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, sunt saepe! Nam eveniet, id placeat modi numquam vero facere? Sed dolorem optio molestias non ab! Illo quisquam ut aliquam repudiandae?</p></header>
         <ul>
             <li><a href="#spacings" class="nav-link color-inverted">spacings</a></li>
             <li><a href="#layout" class="nav-link color-inverted">layout</a></li>
@@ -38,8 +40,8 @@
             <header>
                 spacings
             </header>
-            <div class="row">
-                <pre class="col-md12 blue color-inverted">
+            <div class="row dark">
+                <pre class="col-md12 secondary color-inverted">
 <code>
 $media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
@@ -68,8 +70,8 @@ $column_percentage: 100% / $total_columns
             <header>
                 layout
             </header>
-            <div class="row">
-                <pre class="col-md12 blue color-inverted">
+            <div class="row dark">
+                <pre class="col-md12 secondary color-inverted">
 <code>
 $media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
@@ -97,8 +99,8 @@ $column_percentage: 100% / $total_columns
             <header>
                 colors
             </header>
-            <div class="row">
-                <pre class="col-md12 blue color-inverted">
+            <div class="row dark">
+                <pre class="col-md12 secondary color-inverted">
 <code>
 $media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
@@ -126,8 +128,8 @@ $column_percentage: 100% / $total_columns
             <header>
                 theme
             </header>
-            <div class="row">
-                <pre class="col-md12 blue color-inverted">
+            <div class="row dark">
+                <pre class="col-md12 secondary color-inverted">
 <code>
 $media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
@@ -155,8 +157,8 @@ $column_percentage: 100% / $total_columns
             <header>
                 ui elements
             </header>
-            <div class="row">
-                <pre class="col-md12 blue color-inverted">
+            <div class="row dark">
+                <pre class="col-md12 secondary color-inverted">
 <code>
 $media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
