fix: changes the #nav_opener styles to _nav.sass file

--- a/technicalDocumentationPage/index.html
+++ b/technicalDocumentationPage/index.html
@@ -17,26 +17,26 @@
         <li><a tabindex="0" href="#main-doc">Skip to Main Content</a></li>
     </ul>
     <input type="checkbox" name="nav_opener" id="nav_opener" class="main color-inverted" role="checkbox">
-    <nav id="navbar" class="primary color-inverted">
+    <nav id="navbar" class="primary color-inverted" role="navigation">
         <header>
             <h2>CSS Lib</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, sunt saepe! Nam eveniet, id placeat modi
                 numquam vero facere?</p>
         </header>
         <ul>
-            <li><a href="#spacings" class="nav-link color-inverted">spacings</a></li>
-            <li><a href="#layout" class="nav-link color-inverted">layout</a></li>
-            <li><a href="#colors" class="nav-link color-inverted">colors</a></li>
-            <li><a href="#theme" class="nav-link color-inverted">theme</a></li>
-            <li><a href="#ui_elements" class="nav-link color-inverted">ui elements</a></li>
+            <li><a tabindex="0" href="#spacings" class="nav-link color-inverted">spacings</a></li>
+            <li><a tabindex="0" href="#layout" class="nav-link color-inverted">layout</a></li>
+            <li><a tabindex="0" href="#colors" class="nav-link color-inverted">colors</a></li>
+            <li><a tabindex="0" href="#theme" class="nav-link color-inverted">theme</a></li>
+            <li><a tabindex="0" href="#ui_elements" class="nav-link color-inverted">ui elements</a></li>
         </ul>
 
-        <div class="custom_checkbox">
+        <div class="custom_checkbox main">
             <label for="dark_mode" class="custom_chebox">Dark Mode</label>
-            <input type="checkbox" name="dark_mode" id="dark_mode" role="checkbox">
+            <input type="checkbox" name="dark_mode" id="dark_mode">
         </div>
     </nav>
-    <main id="main-doc" class="pa16 container">
+    <main id="main-doc" class="pa16 container" role="region">
         <H1>CSS lib based in Vuetify and Material Design</H1>
         <section class="main-section" id="spacings">
             <header>
