--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -57,47 +57,64 @@
 
                 <div class="project-tile">
                     <a href="../technicalDocumentationPage/index.html">
-                        <h3 class="project-title">Technical Documentation</h3>
                         <iframe src="../technicalDocumentationPage/index.html"></iframe>
+                        <div class="project-tile-footer color-secondary">
+                            <h3 class="project-title color-inverted">Technical Documentation</h3>
+                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                architecto asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius
+                                assumenda, placeat
+                                doloribus?</p>
+                        </div>
                     </a>
                 </div>
 
                 <div class="project-tile">
                     <a href="../tributePage/index.html">
-                        <h3 class="project-title">Tribute Page</h3>
                         <iframe src="../tributePage/index.html"></iframe>
+                        <div class="project-tile-footer color-accent">
+                            <h3 class="project-title color-inverted">Tribute Page</h3>
+                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis architecto asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius assumenda, placeat
+                                doloribus?</p>
+                        </div>
                     </a>
                 </div>
 
                 <div class="project-tile">
-                    <a href="../technicalDocumentationPage/index.html">
-                        <h3 class="project-title">Technical Documentation</h3>
-                        <iframe src="../technicalDocumentationPage/index.html"></iframe>
+                    <a href="./index.html">
+                        <iframe src="./index.html"></iframe>
+                        <div class="project-tile-footer color-primary">
+                            <h3 class="project-title color-inverted">Personal Portfolio</h3>
+                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis architecto
+                                asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius assumenda,
+                                placeat
+                                doloribus?</p>
+                        </div>
                     </a>
                 </div>
 
                 <div class="project-tile">
-                    <a href="../tributePage/index.html">
-                        <h3 class="project-title">Tribute Page</h3>
-                        <iframe src="../tributePage/index.html"></iframe>
+                    <a href="https://www.google.com">
+                        <iframe src="https://www.google.com"></iframe>
+                        <div class="project-tile-footer color-primary">
+                            <h3 class="project-title color-inverted">Survey Form</h3>
+                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis architecto
+                                asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius assumenda,
+                                placeat
+                                doloribus?</p>
+                        </div>
                     </a>
                 </div>
-
-                <div class="project-tile">
-                    <a href="../technicalDocumentationPage/index.html">
-                        <h3 class="project-title">Technical Documentation</h3>
-                        <iframe src="../technicalDocumentationPage/index.html"></iframe>
-                    </a>
-                </div>
-
-                <div class="project-tile">
-                    <a href="../tributePage/index.html">
-                        <h3 class="project-title">Tribute Page</h3>
-                        <iframe src="../tributePage/index.html"></iframe>
-                    </a>
-                </div>
-
-
             </div>
         </section>
         <section class="main-section" id="contacts">
