--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -17,7 +17,7 @@
         <li><a tabindex="0" href="#main-doc">Skip to Main Content</a></li>
     </ul>
     <input type="checkbox" name="nav_opener" id="nav_opener" class="main color-inverted" role="checkbox">
-    <nav id="navbar" class="secondary color-inverted dark" role="navigation">
+    <nav id="navbar" class="secondary color-inverted dark pa8" role="navigation">
         <header>
             <h2>Ítalo</h2>
         </header>
@@ -41,15 +41,15 @@
             </div>
         </div>
     </nav>
-    <main id="main-doc" class="pa16 container" role="region">
-        <section class="main-section" id="welcome-section">
+    <main id="main-doc" class="pa0 container" role="region">
+        <section class="main-section pa8" id="welcome-section">
             <header>
                 <H1>Ítalo Polazzi a Web Developer</H1>
                 <span>lover</span>
                 <h2>Welcome</h2>
             </header>
         </section>
-        <section class="main-section" id="projects">
+        <section class="main-section pa8" id="projects">
             <header>
                 <h2>Projects</h2>
             </header>
@@ -117,7 +117,16 @@
                 </div>
             </div>
         </section>
-        <section class="main-section" id="contacts">
+        <section class="main-section pa8" id="more_information">
+            <header>
+                <h2>More Information</h2>
+            </header>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, vel magnam molestias ab possimus accusantium corrupti laborum, repudiandae, voluptatibus eligendi assumenda cumque unde distinctio quibusdam sequi officiis tenetur ullam. In! Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
+        </section>
+        <section class="main-section pa8" id="contacts">
             <header>
                 <h2>Contact</h2>
             </header>
@@ -127,7 +136,7 @@
 
     <footer id="footer" class="secondary">&copy; Ítalo Polazzi - 2019</footer>
     <script src="js/index.js" type="module"></script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
 
 </html>
