add: support to images in the project-gallery

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -53,78 +53,148 @@
             <header>
                 <h2>Projects</h2>
             </header>
-            <div class="project-gallery">
 
-                <div class="project-tile">
-                    <a href="../technicalDocumentationPage/index.html">
-                        <iframe src="../technicalDocumentationPage/index.html"></iframe>
-                        <div class="project-tile-footer color-secondary">
-                            <h3 class="project-title color-inverted">Technical Documentation</h3>
-                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                architecto asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius
-                                assumenda, placeat
-                                doloribus?</p>
-                        </div>
-                    </a>
-                </div>
+            <section class="my8 project-types" id="project-web">
+                <h3>Web</h3><hr>
+                <div class="my4 project-gallery">
+                    <!-- <div class="project-tile">
+                        <a href="../technicalDocumentationPage/index.html">
+                            <iframe src="../technicalDocumentationPage/index.html"></iframe>
+                            <div class="project-tile-footer color-secondary">
+                                <h4 class="project-title color-inverted">Technical Documentation</h4>
+                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Placeat
+                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                    architecto asperiores
+                                    provident mollitia ratione magnam, ex nostrum incidunt eius
+                                    assumenda, placeat
+                                    doloribus?</p>
+                            </div>
+                        </a>
+                    </div> -->
 
-                <div class="project-tile">
-                    <a href="../tributePage/index.html">
-                        <iframe src="../tributePage/index.html"></iframe>
-                        <div class="project-tile-footer color-accent">
-                            <h3 class="project-title color-inverted">Tribute Page</h3>
-                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis architecto asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius assumenda, placeat
-                                doloribus?</p>
-                        </div>
-                    </a>
-                </div>
+                    <div class="project-tile">
+                        <a href="../tributePage/index.html">
+                            <iframe src="../tributePage/index.html"></iframe>
+                            <div class="project-tile-footer color-accent">
+                                <h4 class="project-title color-inverted">Tribute Page</h4>
+                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Placeat
+                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis architecto asperiores
+                                    provident mollitia ratione magnam, ex nostrum incidunt eius assumenda, placeat
+                                    doloribus?</p>
+                            </div>
+                        </a>
+                    </div>
 
-                <div class="project-tile">
-                    <a href="./index.html">
-                        <iframe src="./index.html"></iframe>
-                        <div class="project-tile-footer color-primary">
-                            <h3 class="project-title color-inverted">Personal Portfolio</h3>
-                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis architecto
-                                asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius assumenda,
-                                placeat
-                                doloribus?</p>
-                        </div>
-                    </a>
-                </div>
+                    <!-- <div class="project-tile">
+                        <a href="./index.html">
+                            <iframe src="./index.html"></iframe>
+                            <div class="project-tile-footer color-primary">
+                                <h3 class="project-title color-inverted">Personal Portfolio</h3>
+                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Placeat
+                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis architecto
+                                    asperiores
+                                    provident mollitia ratione magnam, ex nostrum incidunt eius assumenda,
+                                    placeat
+                                    doloribus?</p>
+                            </div>
+                        </a>
+                    </div>
 
-                <div class="project-tile">
-                    <a href="https://www.google.com">
-                        <iframe src="https://www.google.com"></iframe>
-                        <div class="project-tile-footer color-primary">
-                            <h3 class="project-title color-inverted">Survey Form</h3>
-                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis architecto
-                                asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius assumenda,
-                                placeat
-                                doloribus?</p>
-                        </div>
-                    </a>
+                    <div class="project-tile">
+                        <a href="https://www.google.com">
+                            <iframe src="https://www.google.com"></iframe>
+                            <div class="project-tile-footer color-primary">
+                                <h3 class="project-title color-inverted">Survey Form</h3>
+                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Placeat
+                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis architecto
+                                    asperiores
+                                    provident mollitia ratione magnam, ex nostrum incidunt eius assumenda,
+                                    placeat
+                                    doloribus?</p>
+                            </div>
+                        </a>
+                    </div> -->
                 </div>
-            </div>
+            </section>
+
+            <section class="my8 project-types" id="project-design">
+                <h3>Design</h3><hr>
+                <div class="my4 project-gallery">
+                    
+                    <div class="project-tile">
+                        <a href="./img/projects/gab.png">
+                            <img src="./img/projects/gab.png"></img>
+                            <div class="project-tile-footer color-secondary">
+                                <h4 class="project-title color-inverted">Technical Documentation</h4>
+                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Placeat
+                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                    architecto asperiores
+                                    provident mollitia ratione magnam, ex nostrum incidunt eius
+                                    assumenda, placeat
+                                    doloribus?</p>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="project-tile">
+                        <a href="./img/projects/office_v2.png">
+                            <img src="./img/projects/office_v2.png"></img>
+                            <div class="project-tile-footer color-accent">
+                                <h4 class="project-title color-inverted">Technical Documentation</h4>
+                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Placeat
+                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                    architecto asperiores
+                                    provident mollitia ratione magnam, ex nostrum incidunt eius
+                                    assumenda, placeat
+                                    doloribus?</p>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="project-tile">
+                        <a href="./img/projects/office_v3.png">
+                            <img src="./img/projects/office_v3.png"></img>
+                            <div class="project-tile-footer color-primary">
+                                <h4 class="project-title color-inverted">Technical Documentation</h4>
+                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Placeat
+                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                    architecto asperiores
+                                    provident mollitia ratione magnam, ex nostrum incidunt eius
+                                    assumenda, placeat
+                                    doloribus?</p>
+                            </div>
+                        </a>
+                    </div>
+
+                </div>
+            </section>
+
         </section>
         <section class="main-section pa8" id="more_information">
             <header>
                 <h2>More Information</h2>
             </header>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, vel magnam molestias ab possimus accusantium corrupti laborum, repudiandae, voluptatibus eligendi assumenda cumque unde distinctio quibusdam sequi officiis tenetur ullam. In! Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae eos accusamus quia delectus
+                beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo,
+                sed, expedita dicta?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae eos accusamus quia delectus
+                beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo,
+                sed, expedita dicta?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae eos accusamus quia delectus
+                beatae sapiente dolorum amet rem illo magni, necessitatibus modi reiciendis maiores dignissimos nemo,
+                sed, expedita dicta?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur
+                adipisicing elit. Repellendus, vel magnam molestias ab possimus accusantium corrupti laborum,
+                repudiandae, voluptatibus eligendi assumenda cumque unde distinctio quibusdam sequi officiis tenetur
+                ullam. In! Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni,
+                necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
         </section>
         <section class="main-section pa8" id="contacts">
             <header>
