--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -16,7 +16,6 @@
         <li><a tabindex="0" href="#navbar">Skip to Navigation</a></li>
         <li><a tabindex="0" href="#main-doc">Skip to Main Content</a></li>
     </ul>
-    <input type="checkbox" name="nav_opener" id="nav_opener" class="main color-inverted" role="checkbox">
     <nav id="navbar" class="secondary color-inverted dark pa8" role="navigation">
         <header>
             <h2>Ítalo</h2>
@@ -38,6 +37,9 @@
             <div class="custom_checkbox main">
                 <label for="dark_mode" class="custom_chebox">Dark Mode</label>
                 <input type="checkbox" name="dark_mode" id="dark_mode">
+            </div>
+            <div id="nav_button">
+                ▼
             </div>
         </div>
     </nav>
