fix: change the nav_button to be located exactly under of the navbar

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -16,7 +16,7 @@
         <li><a tabindex="0" href="#navbar">Skip to Navigation</a></li>
         <li><a tabindex="0" href="#main-doc">Skip to Main Content</a></li>
     </ul>
-    <nav id="navbar" class="secondary color-inverted dark pa8" role="navigation">
+    <nav id="navbar" class="secondary color-inverted pa8" role="navigation">
         <header>
             <h2>Ítalo</h2>
         </header>
@@ -38,7 +38,7 @@
                 <label for="dark_mode" class="custom_chebox">Dark Mode</label>
                 <input type="checkbox" name="dark_mode" id="dark_mode">
             </div>
-            <div id="nav_button">
+            <div id="nav_button" class="inverted color-main">
                 ▼
             </div>
         </div>
