fix: refactoring dark_mode to dark-mode

--- a/technicalDocumentationPage/index.html
+++ b/technicalDocumentationPage/index.html
@@ -32,8 +32,8 @@
         </ul>
 
         <div class="custom_checkbox main">
-            <label for="dark_mode" class="custom_chebox">Dark Mode</label>
-            <input type="checkbox" name="dark_mode" id="dark_mode">
+            <label for="dark-mode" class="custom_chebox">Dark Mode</label>
+            <input type="checkbox" name="dark-mode" id="dark-mode">
         </div>
     </nav>
     <main id="main-doc" class="pa16 container" role="region">
