--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -9,6 +9,7 @@
     <title>Ítalo Polazzi - Web Developer</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body class="main color-inverted">
@@ -20,35 +21,44 @@
         <header>
             <h2>Ítalo</h2>
         </header>
-        <div class="box">
-            <ul>
-                <li><a tabindex="0" href="#welcome-section" class="nav-link color-inverted">welcome</a></li>
-                <li><a tabindex="0" href="#projects" class="nav-link color-inverted">projects</a></li>
-                <li><a tabindex="0" href="#contacts" class="nav-link color-inverted">contacts</a></li>
+        <div id="nav-menu">
+            <ul id="nav-internal">
+                <li><a tabindex="0" href="#welcome-section" class="secondary color-inverted"
+                        title="welcome"><span>welcome</span></a></li>
+                <li><a tabindex="0" href="#projects" class="secondary color-inverted"
+                        title="projects"><span>projects</span></a></li>
+                <li><a tabindex="0" href="#contact" class="secondary color-inverted"
+                        title="contact"><span>contact</span></a></li>
             </ul>
-            <ul>
-                <li><a tabindex="0" href="https://twitter.com/italopolazzi" target="_blank" id="profile-twitter"
-                        class="nav-link color-inverted">twitter</a></li>
-                <li><a tabindex="0" href="https://www.github.com/itpzzi" target="_blank" id="profile-github"
-                        class="nav-link color-inverted">github</a></li>
-                <li><a tabindex="0" href="https://www.freecodecamp.org/italopolazzi" target="_blank" id="profile-link"
-                        class="nav-link color-inverted">fcc</a></li>
+            <ul id="nav-social">
+
+                <li><a tabindex="0" href="https://twitter.com/italopolazzi" class="secondary color-inverted"
+                        title="GitHub profile" target="_blank" id="profile-github"><span>GitHub</span></a></li>
+
+                <li><a tabindex="0" href="https://www.github.com/itpzzi" class="secondary color-inverted"
+                        title="Twitter profile" target="_blank" id="profile-twitter"><span>Twitter</span></a></li>
+
+                <li><a tabindex="0" href="https://www.freecodecamp.org/italopolazzi" class="secondary color-inverted"
+                        title="FreeCodeCamp portfolio" target="_blank" id="profile-link"><span>FreeCodeCamp</span></a>
+                </li>
+
             </ul>
-            <div class="custom_checkbox main">
-                <label for="dark_mode" class="custom_chebox">Dark Mode</label>
-                <input type="checkbox" name="dark_mode" id="dark_mode">
+            <div class="custom-checkbox">
+                <label for="dark-mode" class="custom-chebox">
+                    <i class="icon" aria-hidden="true">brightness_6</i> Dark Mode
+                </label>
+                <input title="Dark mode" type="checkbox" name="dark-mode" id="dark-mode">
             </div>
-            <div id="nav_button" class="inverted color-main">
-                ▼
+            <div id="nav-menu-opener" class="inverted color-main" role="button" title="menu">
+                <i class="icon" aria-hidden="true">menu</i><span>Menu</span>
             </div>
         </div>
     </nav>
-    <main id="main-doc" class="pa0 container" role="region">
+    <main id="main-doc" class="pa0 container" role="main">
         <section class="main-section pa8" id="welcome-section">
             <header>
-                <H1>Ítalo Polazzi a Web Developer</H1>
-                <span>lover</span>
-                <h2>Welcome</h2>
+                <H1>Ítalo Polazzi a Web Develover <i class="icon" aria-hidden="true">favorite_border</i> </H1>
+                <h2><i class="icon" aria-hidden="true">home</i>Welcome</h2>
             </header>
         </section>
         <section class="main-section pa8" id="projects">
@@ -57,7 +67,8 @@
             </header>
 
             <section class="my8 project-types" id="project-web">
-                <h3>Web</h3><hr>
+                <h3>Web</h3>
+                <hr>
                 <div class="my4 project-gallery">
                     <!-- <div class="project-tile">
                         <a href="../technicalDocumentationPage/index.html">
@@ -77,7 +88,7 @@
 
                     <div class="project-tile">
                         <a href="../tributePage/index.html">
-                            <iframe src="../tributePage/index.html"></iframe>
+                            <iframe tabindex="-1" src="../tributePage/index.html"></iframe>
                             <div class="project-tile-footer color-accent">
                                 <h4 class="project-title color-inverted">Tribute Page</h4>
                                 <p class="color-inverted">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -124,9 +135,10 @@
             </section>
 
             <section class="my8 project-types" id="project-design">
-                <h3>Design</h3><hr>
+                <h3>Design</h3>
+                <hr>
                 <div class="my4 project-gallery">
-                    
+
                     <div class="project-tile">
                         <a href="./img/projects/gab.png">
                             <img src="./img/projects/gab.png"></img>
@@ -198,7 +210,7 @@
                 ullam. In! Ducimus recusandae eos accusamus quia delectus beatae sapiente dolorum amet rem illo magni,
                 necessitatibus modi reiciendis maiores dignissimos nemo, sed, expedita dicta?</p>
         </section>
-        <section class="main-section pa8" id="contacts">
+        <section class="main-section pa8" id="contact">
             <header>
                 <h2>Contact</h2>
             </header>
