add: material design icons (mdi) and removes material icons

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -9,7 +9,9 @@
     <title>Ítalo Polazzi - Web Developer</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.min.css">
 </head>
 
 <body class="main color-inverted">
@@ -32,33 +34,36 @@
             </ul>
             <ul id="nav-social">
 
-                <li><a tabindex="0" href="https://twitter.com/italopolazzi" class="secondary color-inverted"
-                        title="GitHub profile" target="_blank" id="profile-github"><span>GitHub</span></a></li>
-
                 <li><a tabindex="0" href="https://www.github.com/itpzzi" class="secondary color-inverted"
-                        title="Twitter profile" target="_blank" id="profile-twitter"><span>Twitter</span></a></li>
+                        title="GitHub profile" target="_blank" id="profile-github"><i
+                            class="mdi mdi-github-circle"></i><span>GitHub</span></a>
+                </li>
+
+                <li><a tabindex="0" href="https://twitter.com/italopolazzi" class="secondary color-inverted"
+                        title="Twitter profile" target="_blank" id="profile-twitter"><i
+                            class="mdi mdi-twitter-circle"></i><span>Twitter</span></a></li>
 
                 <li><a tabindex="0" href="https://www.freecodecamp.org/italopolazzi" class="secondary color-inverted"
                         title="FreeCodeCamp portfolio" target="_blank" id="profile-link"><span>FreeCodeCamp</span></a>
                 </li>
 
             </ul>
-            <div class="custom-checkbox">
+            <div id="nav-dark-mode">
                 <label for="dark-mode" class="custom-chebox">
-                    <i class="icon" aria-hidden="true">brightness_6</i> Dark Mode
+                    <!-- <i class="icon" aria-hidden="true">brightness_6</i> Dark Mode -->
                 </label>
                 <input title="Dark mode" type="checkbox" name="dark-mode" id="dark-mode">
             </div>
             <div id="nav-menu-opener" class="inverted color-main" role="button" title="menu">
-                <i class="icon" aria-hidden="true">menu</i><span>Menu</span>
+                <!-- <i class="icon" aria-hidden="true">menu</i><span>Menu</span> -->
             </div>
         </div>
     </nav>
     <main id="main-doc" class="pa0 container" role="main">
         <section class="main-section pa8" id="welcome-section">
             <header>
-                <H1>Ítalo Polazzi a Web Develover <i class="icon" aria-hidden="true">favorite_border</i> </H1>
-                <h2><i class="icon" aria-hidden="true">home</i>Welcome</h2>
+                <!-- <H1>Ítalo Polazzi a Web Develover <i class="icon" aria-hidden="true">favorite_border</i> </H1> -->
+                <!-- <h2><i class="icon" aria-hidden="true">home</i>Welcome</h2> -->
             </header>
         </section>
         <section class="main-section pa8" id="projects">
